--- a/server/testers/testPluginWithMocha.html
+++ b/server/testers/testPluginWithMocha.html
@@ -43,7 +43,8 @@
 </body>
 <script>
   const urlParams = new URLSearchParams(window.location.search);
-  const myPlugin = urlParams.get('urlPlugin');
+  const pluginName = urlParams.get('urlPlugin');
+  const myPlugin = "http://localhost:8000/plugins/" + pluginName;
   document.getElementById("urlPlugin").value = myPlugin;
   var checkbox = document.querySelector('#checkBox')
   var AudioContext = window.AudioContext || window.webkitAudioContext;
@@ -51,7 +52,7 @@
   var player = document.getElementById("soundSample");
   var mediaSource = ctx.createMediaElementSource(player);
   var bt_buildIt = document.querySelector('#bt_buildIt');
-  var pluginName = myPlugin.split('plugins/')[1];
+  
 
   window.onload = () => {
 
@@ -70,7 +71,7 @@
 
     player.onplay = () => {
       ctx.resume().then(() => {
-        console.log('Playback resumed successfully');
+        //console.log('Playback resumed successfully');
       });
     }
   }
@@ -82,7 +83,7 @@
       let className = metadata.name;
       loadPlugin(className, baseURL);
     }).catch((e) => {
-      console.log(e);
+      //console.log(e);
     });
   }
 
@@ -98,12 +99,12 @@
 
     if (scriptExists(scriptURL)) {
       //script exists
-      console.log("SCRIPT EXISTS WE JUST INSTANCIATE THE PLUGIN");
+      //console.log("SCRIPT EXISTS WE JUST INSTANCIATE THE PLUGIN");
       buildPlugin(className, baseURL);
       return;
     }
 
-    console.log("SCRIPT DOES NOT EXIST, ADD A SCRIPT SRC=, THEN INSTANCIATE PLUGIN")
+    //console.log("SCRIPT DOES NOT EXIST, ADD A SCRIPT SRC=, THEN INSTANCIATE PLUGIN")
 
     // if we are here this means that the script is not present. Add it to the document
     let script = document.createElement("script");
@@ -122,7 +123,7 @@
   function buildPlugin(className, baseURL) {
 
     var plugin = new window[className](ctx, baseURL);
-    console.log(plugin);
+    //console.log(plugin);
 
     plugin.load().then((node) => {
       // loads and initialize the audio processor part
@@ -131,7 +132,7 @@
       // not doing it twice, and associate the node with its GUI.
       if (checkbox.checked) {
         plugin.loadGui().then((elem) => {
-          console.log("ADDING PLUGIN");
+          //console.log("ADDING PLUGIN");
           // show the GUI of the plugn, the audio part is ready to be used
           document.querySelector("#WAP").appendChild(elem);
           //mediaSource.connect(node);
@@ -143,7 +144,7 @@
       try {
         mediaSource.connect(node);
       } catch (error) {
-        console.log("this plugin does not use audioworkletnode or compositenode");
+        //console.log("this plugin does not use audioworkletnode or compositenode");
         mediaSource.connect(node.getInput(0));
       }
       // if (node instanceof AudioWorkletNode) 
@@ -244,7 +245,6 @@
     });
 	if (mocha.run().stats.failures === 0) {
 		console.log(pluginName + " passed tests");
-		
 	}
 	const data = { name: pluginName, validate: true };
 
