--- a/server/testers/testPluginWithMocha.html
+++ b/server/testers/testPluginWithMocha.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="styles.css">
   <script src="../polyfills/webcomponents-lite.js"></script>
   <script src="../sdk/WebAudioSDK.js"></script>
-  <title>Plugin tester</title>
+  <title>Plugin Tester</title>
 </head>
 
 <body>
   <div class="title">
-    <h1>Plugin Tester</h1>
+    <h1>Plugin Tester : </h1>
   </div>
   <div id="layout">
     <div class="content" id="main">
@@ -27,7 +27,9 @@
         <input id="checkBox" type="checkbox" checked>
       </div>
       <div id="buttons">
-        <button id="bt_buildIt">build it</button>
+        <button id="bt_buildIt">Lancer les tests</button>
+      </div>
+      <div id="result">
       </div>
     </div>
 
@@ -56,7 +58,6 @@
 
 
     bt_buildIt.addEventListener('click', () => {
-      console.log("click");
       checkMetadata(document.querySelector("#urlPlugin").value);
     });
 
@@ -81,7 +82,7 @@
       let className = metadata.name;
       loadPlugin(className, baseURL);
     }).catch((e) => {
-      //console.log(e);
+      console.log(e);
     });
   }
 
@@ -122,7 +123,7 @@
 
     var plugin = new window[className](ctx, baseURL);
     //console.log(plugin);
-
+    let errors;
     plugin.load().then((node) => {
       // loads and initialize the audio processor part
       // Then use the factory to create the HTML custom elem that holds the GUI
@@ -160,7 +161,6 @@
 
       testPlugin(node);
     });
-
   }
 
 
@@ -241,25 +241,28 @@
         expect(plugin.numberOfOutputs).to.exist;
       });
     });
-	if (mocha.run().stats.failures === 0) {
-		console.log(pluginName + " passed tests");
-	}
-	const data = { name: pluginName, validate: true };
+    if (mocha.run().stats.failures === 0) {
+      console.log(pluginName + " passed tests");
+      document.getElementById("result").innerText = "Plugin validated.";
+    } else {
+      document.getElementById("result").innerText = "Plugin can't be validated.";
+    }
+    const data = { name: pluginName, validate: true };
 
-	fetch('http://localhost:3001/api/plugin/validate', {
-	  method: 'POST', // or 'PUT'
-	  headers: {
-		'Content-Type': 'application/json',
-	  },
-	  body: JSON.stringify(data),
-	})
-	.then((response) => response.json())
-	.then((data) => {
-    console.log('Success:', data);
-	})
-	.catch((error) => {
-	  console.error('Error:', error);
-	});
+    fetch('http://localhost:3001/api/plugin/validate', {
+      method: 'POST', // or 'PUT'
+      headers: {
+      'Content-Type': 'application/json',
+      },
+      body: JSON.stringify(data),
+    })
+    .then((response) => response.json())
+    .then((data) => {
+      console.log('Success:', data);
+    })
+    .catch((error) => {
+      console.error('Error:', error);
+    });
   }
 </script>
 
